--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Shared/_Layout.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Shared/_Layout.cshtml
@@ -220,18 +220,66 @@
                             </li>
                         }
                     }
-
-                    @if (!hideMenu)
+                    @if (!pHasError && SessionFacade.CurrentCustomer != null && SessionFacade.CurrentCustomer.ShowCaseOnExternalPage != 0)
                     {
-                        var serviceRequest = pActionSettings.SingleOrDefault(a => a.ObjectId == ActionObject.ServiceRequest);
-                        if (serviceRequest != null)
+                        if (!hideMenu)
                         {
-                            if (serviceRequest.Visibled)
+                            var serviceRequest = pActionSettings.SingleOrDefault(a => a.ObjectId == ActionObject.ServiceRequest);
+                            if (serviceRequest != null)
+                            {
+                                if (serviceRequest.Visibled)
+                                {
+                                    <li class="dropdown blue">
+                                        <a href="#" class="dropdown-toggle blue" data-toggle="dropdown">
+                                            <i class="@(string.IsNullOrEmpty(serviceRequest.ObjectClass) ? "fa fa-edit mnu-fa" : serviceRequest.ObjectClass)"></i><br />
+                                            @Translation.Get(serviceRequest.ObjectValue, Enums.TranslationSource.TextTranslation)
+                                        </a>
+
+                                        <ul class="dropdown-menu">
+                                            @if (pCaseTemplates != null)
+                                            {
+                                                foreach (var c in pCaseTemplates)
+                                                {
+
+                                                    <li>
+                                                        @if (string.IsNullOrEmpty(c.TemplatePath))
+                                                        {
+                                                            <a href="@Url.Action("NewCase", "case", new { customerId = pCustomerId, caseTemplateId = c.Id, area = "" })">
+                                                                <span class="glyphicon glyphicon-plus"></span>@c.Name
+                                                                <br />
+                                                                <span class="small">@c.ShortDescription</span>
+                                                            </a>
+                                                        }
+                                                        else
+                                                        {
+                                                            var tempPath = c.TemplatePath;
+                                                            tempPath += "?language=[language]";
+                                                            <a href="@Url.Content(tempPath.SetUrlParameters())">
+                                                                <span class="glyphicon glyphicon-plus"></span>@c.Name
+                                                                <br />
+                                                                <span class="small">@c.ShortDescription</span>
+                                                            </a>
+                                                        }
+                                                    </li>
+                                                }
+                                            }
+                                        </ul>
+                                    </li>
+                                }
+                            }
+                            else
                             {
                                 <li class="dropdown blue">
                                     <a href="#" class="dropdown-toggle blue" data-toggle="dropdown">
-                                        <i class="@(string.IsNullOrEmpty(serviceRequest.ObjectClass) ? "fa fa-edit mnu-fa" : serviceRequest.ObjectClass)"></i><br />
-                                        @Translation.Get(serviceRequest.ObjectValue, Enums.TranslationSource.TextTranslation)
+                                        <i class="fa fa-edit mnu-fa"></i><br />
+                                        @if (appType == ApplicationTypes.LineManager)
+                                        {
+                                            @Translation.Get("Order New Service Request", Enums.TranslationSource.TextTranslation)
+                                        }
+                                        else
+                                        {
+                                            @Translation.Get("Initiate a case", Enums.TranslationSource.TextTranslation)
+                                        }
                                     </a>
 
                                     <ul class="dropdown-menu">
@@ -239,14 +287,13 @@
                                         {
                                             foreach (var c in pCaseTemplates)
                                             {
-
                                                 <li>
                                                     @if (string.IsNullOrEmpty(c.TemplatePath))
                                                     {
                                                         <a href="@Url.Action("NewCase", "case", new { customerId = pCustomerId, caseTemplateId = c.Id, area = "" })">
-                                                            <span class="glyphicon glyphicon-plus"></span>@c.Name
+                                                            <span class="glyphicon glyphicon-plus"></span>&nbsp;@Translation.Get(c.Name, Enums.TranslationSource.TextTranslation)
                                                             <br />
-                                                            <span class="small">@c.ShortDescription</span>
+                                                            <span class="small">@Translation.Get(c.ShortDescription, Enums.TranslationSource.TextTranslation)</span>
                                                         </a>
                                                     }
                                                     else
@@ -254,9 +301,9 @@
                                                         var tempPath = c.TemplatePath;
                                                         tempPath += "?language=[language]";
                                                         <a href="@Url.Content(tempPath.SetUrlParameters())">
-                                                            <span class="glyphicon glyphicon-plus"></span>@c.Name
+                                                            <span class="glyphicon glyphicon-plus"></span>&nbsp;@Translation.Get(c.Name, Enums.TranslationSource.TextTranslation)
                                                             <br />
-                                                            <span class="small">@c.ShortDescription</span>
+                                                            <span class="small">@Translation.Get(c.ShortDescription, Enums.TranslationSource.TextTranslation)</span>
                                                         </a>
                                                     }
                                                 </li>
@@ -266,87 +313,43 @@
                                 </li>
                             }
                         }
-                        else
-                        {
-                            <li class="dropdown blue">
-                                <a href="#" class="dropdown-toggle blue" data-toggle="dropdown">
-                                    <i class="fa fa-edit mnu-fa"></i><br />
-                                    @if (appType == ApplicationTypes.LineManager)
-                                    {
-                                        @Translation.Get("Order New Service Request", Enums.TranslationSource.TextTranslation)
-                                    }
-                                    else
-                                    {
-                                        @Translation.Get("Initiate a case", Enums.TranslationSource.TextTranslation)
-                                    }
-                                </a>
-
-                                <ul class="dropdown-menu">
-                                    @if (pCaseTemplates != null)
-                                    {
-                                        foreach (var c in pCaseTemplates)
-                                        {
-                                            <li>
-                                                @if (string.IsNullOrEmpty(c.TemplatePath))
-                                                {
-                                                    <a href="@Url.Action("NewCase", "case", new { customerId = pCustomerId, caseTemplateId = c.Id, area = "" })">
-                                                        <span class="glyphicon glyphicon-plus"></span>&nbsp;@Translation.Get(c.Name, Enums.TranslationSource.TextTranslation)
-                                                        <br />
-                                                        <span class="small">@Translation.Get(c.ShortDescription, Enums.TranslationSource.TextTranslation)</span>
-                                                    </a>
-                                                }
-                                                else
-                                                {
-                                                    var tempPath = c.TemplatePath;
-                                                    tempPath += "?language=[language]";
-                                                    <a href="@Url.Content(tempPath.SetUrlParameters())">
-                                                        <span class="glyphicon glyphicon-plus"></span>&nbsp;@Translation.Get(c.Name, Enums.TranslationSource.TextTranslation)
-                                                        <br />
-                                                        <span class="small">@Translation.Get(c.ShortDescription, Enums.TranslationSource.TextTranslation)</span>
-                                                    </a>
-                                                }
-                                            </li>
-                                        }
-                                    }
-                                </ul>
-                            </li>
-                        }
                     }
-
-                    @if (!hideMenu)
+                    @if (!pHasError && SessionFacade.CurrentCustomer != null && SessionFacade.CurrentCustomer.ShowCasesOnExternalPage != 0)
                     {
-                        var ongoingService = pActionSettings.SingleOrDefault(a => a.ObjectId == ActionObject.OngoingService);
-                        if (ongoingService != null)
+                        if (!hideMenu)
                         {
-                            if (ongoingService.Visibled)
+                            var ongoingService = pActionSettings.SingleOrDefault(a => a.ObjectId == ActionObject.OngoingService);
+                            if (ongoingService != null)
+                            {
+                                if (ongoingService.Visibled)
+                                {
+                                    <li class="blue">
+                                        <a href="@Url.Action("UserCases", "case", new { customerId = pCustomerId, progressId = CaseProgressFilter.CasesInProgress, area = "" })">
+                                            <i class="@(string.IsNullOrEmpty(ongoingService.ObjectClass) ? "fa fa-clock-o mnu-fa" : ongoingService.ObjectClass)"></i><br />
+                                            @Translation.Get(ongoingService.ObjectValue, Enums.TranslationSource.TextTranslation)
+                                        </a>
+                                    </li>
+                                }
+                            }
+                            else
                             {
                                 <li class="blue">
-                                    <a href="@Url.Action("UserCases", "case", new { customerId = pCustomerId, progressId = CaseProgressFilter.CasesInProgress, area = "" })">
-                                        <i class="@(string.IsNullOrEmpty(ongoingService.ObjectClass) ? "fa fa-clock-o mnu-fa" : ongoingService.ObjectClass)"></i><br />
-                                        @Translation.Get(ongoingService.ObjectValue, Enums.TranslationSource.TextTranslation)
+                                    <a href="@Url.Action("UserCases", "case", new { customerId = pCustomerId, area = "" })">
+                                        <i class="fa fa-clock-o mnu-fa"></i><br />
+                                        @*<div class="ico-ongoing"></div>*@
+                                        @if (appType == ApplicationTypes.LineManager)
+                                        {
+                                            @Translation.Get("Service Requests", Enums.TranslationSource.TextTranslation)
+                                        }
+                                        else
+                                        {
+                                            @Translation.Get("Cases", Enums.TranslationSource.TextTranslation)
+                                        }
                                     </a>
                                 </li>
                             }
                         }
-                        else
-                        {
-                            <li class="blue">
-                                <a href="@Url.Action("UserCases", "case", new { customerId = pCustomerId, area = "" })">
-                                    <i class="fa fa-clock-o mnu-fa"></i><br />
-                                    @*<div class="ico-ongoing"></div>*@
-                                    @if (appType == ApplicationTypes.LineManager)
-                                    {
-                                        @Translation.Get("Service Requests", Enums.TranslationSource.TextTranslation)
-                                    }
-                                    else
-                                    {
-                                        @Translation.Get("Cases", Enums.TranslationSource.TextTranslation)
-                                    }
-                                </a>
-                            </li>
-                        }
                     }
-                    
                     @if (!hideMenu && SessionFacade.CurrentLocalUser != null && orderModuleIsEnabled && (SessionFacade.CurrentLocalUser.IsAdministrator() || userHasOrderTypes))
                     {
                         <li class="blue">
