[FIX] #57745 Setting for group templates

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/SelfServiceSetting/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/SelfServiceSetting/Index.cshtml
@@ -114,6 +114,14 @@
                                     &nbsp; &nbsp; @Translation.Get("Visa kundspecifik sida", Enums.TranslationSource.TextTranslation)
                                 </td>
                             </tr>
+                            <tr>
+                                <td></td>
+                                <td>
+                                    <input type="checkbox" name="customer.GroupCaseTemplates" @(Model.Customer.GroupCaseTemplates == 1 ? "checked=checked" : "") value="1" />
+                                    <input type="hidden" name="customer.GroupCaseTemplates" value="0" />
+                                    &nbsp; &nbsp; @Translation.Get("Gruppera ärendemallar", Enums.TranslationSource.TextTranslation)
+                                </td>
+                            </tr>
                         </table>
                     </div>
 
