--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
@@ -225,8 +225,8 @@
 
                     foreach (var extendedCase in Model.ExtendedCases)
                     {
-                        <li data-active-tab="@string.Format(CaseTabs.ExtendedCaseTab, extendedCase.Id)" class="@((Model.ActiveTab == string.Format(CaseTabs.ExtendedCaseTab, extendedCase.Id)) ? "active" : "")" >
-                            <a href="#container_@extendedCase.Id" id="extendedcase-tab-@extendedCase.Id" class="extendedcase" data-id="@extendedCase.Id" data-state="">
+                        <li data-active-tab="@CaseTabs.ExtendedCaseTab" class="@((Model.ActiveTab.StartsWith(CaseTabs.ExtendedCaseTab)) ? "active" : "")" >
+                            <a href="#container_@extendedCase.Id" id="extendedcase-tab" class="extendedcase" data-id="@extendedCase.Id" data-state="">
                                 @(Translation.GetCoreTextTranslation(extendedCase.Name))
                                 <i id="exTabIndicator_@extendedCase.Id" class="tab-indicator" style="display:none">&nbsp;</i>
                             </a>                            
@@ -2339,7 +2339,7 @@
                 {
                     foreach (var extendedCase in Model.ExtendedCases)
                     {
-                        <div id="container_@extendedCase.Id" class="tab-pane tab-pane-border @((Model.ActiveTab == string.Format(CaseTabs.ExtendedCaseTab, extendedCase.Id)) ? "active" : "")">
+                        <div id="container_@extendedCase.Id" class="tab-pane tab-pane-border @((Model.ActiveTab.StartsWith(CaseTabs.ExtendedCaseTab)) ? "active" : "")">
                         </div>
                     }
                 }
