--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Content/css/selfservice.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Content/css/selfservice.css
@@ -421,6 +421,19 @@ table th.thpointer {
 }
 
 /***TABS**************/
+
+.tab-indicator {
+    width: 20px !important;
+    height: 20px !important;
+    background: url('/content/img/ajax-loader.gif');
+    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+    border: none;
+    display: inline-block;
+}
+
 .tab-pane
 {
 	border-left: 1px solid #ddd;
