[UPD] Case overview

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
@@ -204,6 +204,9 @@
     @Html.HiddenFor(model => model.CaseDataModel.Text_External)
     @Html.HiddenFor(model => model.CaseDataModel.Text_Internal)
 
+    @Html.HiddenFor(model => model.CaseDataModel.CaseSolution_Id)
+
+
     // Etc
     @Html.HiddenFor(model => model.CaseTemplateId)
     @Html.HiddenFor(model => model.CaseId)
