[FIX] #58396 Changed _CasePrint.cs to support IE11 for printing

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CasePrint.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CasePrint.cshtml
@@ -131,7 +131,10 @@
             frameDoc.document.close();
             setTimeout(function () {
                 window.frames["printFrame"].focus();
-                window.frames["printFrame"].print();
+                // IE11 and Firefox fix
+                if (!frameDoc.document.execCommand('print', false, null)) {
+                    window.frames["printFrame"].print();
+                }
                 printFrame.remove();
             }, 500);
         });
